# facto-loop-miner

./: .gitignore  Cargo.toml  README.md  expanded.md  factorio-rcon-protocol-docs.md  intro.md  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
blueprints/: basic.txt  chunk-rail-debug.txt  decompress.sh  fbe-right-rail.txt  fbe-turn-possible-positions.txt
common/: Cargo.toml
common/src/: duration.rs  err_bt.rs  err_utils.rs  lib.rs  logger.rs  util.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs  opencv.rs  simd.rs  simd_diff.rs
core/src/admiral/: client.rs  err.rs  mine_builder.rs  mod.rs
core/src/admiral/executor/: client.rs  entrypoint.rs  file.rs  mod.rs  rcon.rs
core/src/admiral/generators/: assembler_robo_farm.rs  beacon_farm.rs  mod.rs  rail45.rs  rail90.rs  rail_beacon_farm.rs  rail_line.rs  rail_station.rs  rail_station_pathfound.rs  terapower.rs
core/src/admiral/lua_command/: chart_pulse.rs  checked_command.rs  fac_destroy.rs  fac_log.rs  fac_surface_create_entity.rs  fac_surface_create_entity_safe.rs  lua_batch.rs  mod.rs  scanner.rs
core/src/gamedata/: compressed_export.rs  lua.rs  mod.rs
core/src/navigator/: base_source.rs  basic.rs  circleify.rs  mine_executor.rs  mine_permutate.rs  mine_selector.rs  mod.rs  mori.rs  mori2.rs  mori_boss.rs  mori_cost.rs  path_executor.rs  path_grouper.rs  path_planner.rs  path_side.rs  rail_point_compare.rs  resource_cloud.rs  shinri.rs  threaded_search.rs
core/src/navigator/planners/: altare.rs  altare_old.rs  common.rs  debugplan.rs  mod.rs  ruze.rs
core/src/self_bin/: get_patch.rs
core/src/state/: err.rs  machine.rs  mod.rs  tuneables.rs
core/src/state/machine_v1/: mod.rs  step00_import.rs  step03_crop.rs  step04_contours.rs  step10_base.rs  step201_nav.rs  step20_nav.rs  step20_nav_old.rs  step21_demark.rs  step30_facto.rs  step99_death.rs
core/src/surface/: easier_box.rs  fast_metrics.rs  metric.rs  mod.rs  patch.rs  pixel.rs  sector.rs  surface.rs
core/src/surfacev/: bit_grid.rs  err.rs  example_mine.json  fast_metrics.rs  mine.rs  mod.rs  rail_turn_templates.rs  sanity.rs  tape.rs  varea.rs  ventity_map.rs  vpatch.rs  vpoint.rs  vsurface.rs  vsurface_pixel.rs  vsurface_pixel_patches.rs
core/src/surfacev/vsurface/: convert.rs  core.rs  mod.rs  nav.rs  patch.rs  pixel.rs  pixel_patches.rs  rail.rs  rails.rs
core/src/util/: duration.rs  io.rs  mod.rs
docs/: math.md
fac-engine/: Cargo.toml  example_bp.json  out.html
fac-engine/benches/: trim_bench.rs
fac-engine/src/: err.rs  lib.rs
fac-engine/src/admiral/: client.rs  err.rs  mine_builder.rs  mod.rs  trimmer.rs
fac-engine/src/admiral/executor/: client.rs  entrypoint.rs  file.rs  mod.rs
fac-engine/src/admiral/generators/: assembler_farm.rs  assembler_robo_farm.rs  mod.rs  rail45.rs  rail_beacon_farm.rs  rail_pan.rs  rail_station.rs  terapower.rs
fac-engine/src/admiral/lua_command/: chart_pulse.rs  checked_command.rs  fac_destroy.rs  fac_execution_define.rs  fac_render_destroy.rs  fac_render_rect.rs  fac_render_text.rs  fac_surface_create_entity.rs  fac_surface_create_tile.rs  lua_batch.rs  lua_syntax.rs  mod.rs  raw_lua.rs  scanner.rs  train_boot.rs
fac-engine/src/blueprint/: blueprint.rs  bpitem.rs  contents.rs  converter.rs  decoder.rs  mod.rs  output.rs
fac-engine/src/blueprint/bpfac/: blueprint.rs  bpversion.rs  entity.rs  icons.rs  infinity.rs  mod.rs  position.rs  schedule.rs  signal_id.rs  tile.rs
fac-engine/src/common/: ascii_color.rs  cvpoint.rs  entity.rs  entity_macro.rs  group.rs  mod.rs  names.rs  names_tile.rs  varea.rs  vpoint.rs  vpoint_direction.rs
fac-engine/src/game_blocks/: assembler_cell.rs  assembler_industry.rs  assembler_thru.rs  beacon_farm.rs  belt_array.rs  belt_bettel.rs  belt_bus.rs  belt_cloud.rs  belt_combiner.rs  belt_grid.rs  belt_train_unload.rs  block.rs  brain.rs  mine_island.rs  mine_ore.rs  mod.rs  rail_hope.rs  rail_hope_dual.rs  rail_hope_single.rs  rail_hope_soda.rs  rail_loop.rs  rail_station.rs  robo_farm.rs  solar_bath.rs  terapower.rs
fac-engine/src/game_entities/: assembler.rs  beacon.rs  belt.rs  belt_split.rs  belt_transport.rs  belt_under.rs  cargo_wagon.rs  chest.rs  concrete.rs  direction.rs  electric_large.rs  electric_mini.rs  electric_pole_big.rs  electric_pole_small.rs  infinity_power.rs  inserter.rs  lamp.rs  locomotive.rs  mining_drill_electric.rs  mod.rs  module.rs  radar.rs  rail.rs  rail_curved.rs  rail_signal.rs  rail_straight.rs  resource.rs  roboport.rs  solar.rs  tier.rs  train_stop.rs
fac-engine/src/tests/: assembler.rs  assembler_tests.rs  belt.rs  belt_tests.rs  mod.rs  old_client_backup.rs  ore_tests.rs  other_tests.rs  render_text_tests.rs  train_area.rs  train_loop.rs  train_loop_tests.rs  train_rail_tests.rs  train_rails.rs  train_station.rs  train_station_tests.rs
fac-engine/src/util/: ansi.rs  bool_num.rs  mod.rs
fac-engine/src/visualizer/: visualizer.rs
fac-engine/test_blueprints/: rail_station_skeleton
fac-entity/: Cargo.toml
fac-entity/src/: constants.rs  err.rs  lib.rs  point.rs
history/: malloc-experiments.txt
io_experiments/: Cargo.toml
io_experiments/src/: err.rs  io.rs  io_bench.rs  io_uring.rs  io_uring_common.rs  io_uring_file.rs  io_uring_file_copying.rs  lib.rs  main.rs  varray.rs
maps/: chunk1000v2.mapGenSettings.json  chunk1000v2.string  create-save.sh  decode-map.js  empty-world.json  empty-world.string  lm-artful.mapGenSettings.json  lm-artful.mapSettings.json  lm-artful.string  no-enemy.string  notes.txt  server-settings.json  start-save-testing.sh  start-save.sh
notes/: other.md  tell.md
scanner_mod/: scanner.lua
scripts/: decode-blueprint.sh  images-to-video-create.sh  images-to-video-listen.sh  oculante.sh  sloc.sh
src/: data.rs  data.ts  hello.ts  img.rs  json.d.ts  lib.rs  main.rs  opencv.rs  simd.rs  simd_diff.rs  state.rs  surface.rs
src/admiral/: client.rs  err.rs  generators.rs  lua_command.rs  mod.rs  remote_game.rs
src/gamedata/: compressed_export.rs  importer.rs  lua.rs  mod.rs
xanacss/: egrid.css  egrid.gen.js  main.css  main.js  reset.css  viewer.html
(+107 files in other folders)
