[workspace]
members = ["common", "core", "fac-engine", "io_experiments"]
resolver = "2"

default-members = ["core"]

[profile.release]
lto = "fat"

[workspace.dependencies]
#
tracing = "0.1.41"
thiserror = "2.0.7"
num-format = "0.4.4"
strum = { version = "0.26.3", features = ["derive"] }
enum-map = "2.7.3"
itertools = "0.13.0"
#
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
