[workspace]
members = ["common", "core", "fac-engine", "io_experiments"]
resolver = "3"
default-members = ["core"]

[workspace.package]
version = "0.3.0"
edition = "2024"


[profile.release]
#lto = "fat"
debug = true

[workspace.dependencies]
xana-commons-rs = { path = "../xana-commons-rs" }
#
tracing = "0.1.41"
thiserror = "2.0.7"
num-format = "0.4.4"
strum = { version = "0.26.3", features = ["derive"] }
enum-map = "2.7.3"
itertools = "0.14.0"
#
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
simd-json = { version = "0.14.3", features = ["serde"] }
nu-ansi-term = "0.50.1"
