[package]
name = "facto-loop-miner-common"
version = "0.1.0"
edition = "2024"

[dependencies]
#
num-format = { workspace = true }
tracing = { workspace = true }
#
simd-json = { workspace = true }
#
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-log = "0.2.0"
#chrono = { version = "0.4.39", default-features = false, features = ["std"] }
chrono = { version = "0.4.39" }
nu-ansi-term = { workspace = true }
#
