[package]
name = "facto-loop-miner-common"
version.workspace = true
edition.workspace = true

[dependencies]
xana-commons-rs = { workspace = true }
#
num-format = { workspace = true }
tracing = { workspace = true }
#
simd-json = { workspace = true }
#
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-log = "0.2.0"
#chrono = { version = "0.4.39", default-features = false, features = ["std"] }
chrono = { version = "0.4.39" }
nu-ansi-term = { workspace = true }
#
