[package]
name = "facto-loop-miner"
version = "0.1.0"
edition = "2021"

[dependencies]
facto-loop-miner-common = { path = "../common" }
facto-loop-miner-fac-engine = { path = "../fac-engine" }
facto-loop-miner-io = { path = "../io_experiments" }
#
tracing = { workspace = true }
thiserror = { workspace = true }
num-format = { workspace = true }
strum = { workspace = true }
itertools = { workspace = true }
#
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { version = "0.13.11", features = ["serde"] }
#
mimalloc = "0.1.43"
jemallocator = "0.5.4"
#
image = "0.25.5"
kiddo = "4.2.1"
pathfinding = { version = "4.9.1", path = "../../pathfinding" }
rayon = "1.10.0"
bitvec = "1.0.1"
lazy_static = "1.5.0"
crossbeam = "0.8.4"
#clap = { version = "4.5.23", features = ["derive"] }
#bytemuck = { version = "1.20.0", features = ["extern_crate_alloc"] }
enum-map = "2.7.3"
derivative = "2.2.0"
