[package]
name = "facto-loop-miner"
version.workspace = true
edition.workspace = true

[dependencies]
facto-loop-miner-common = { path = "../common" }
facto-loop-miner-fac-engine = { path = "../fac-engine" }
facto-loop-miner-io = { path = "../io_experiments" }
#
tracing = { workspace = true }
thiserror = { workspace = true }
num-format = { workspace = true }
strum = { workspace = true }
enum-map = { workspace = true }
itertools = { workspace = true }
#
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
#
mimalloc = "0.1.43"
#
image = "0.25.5"
kiddo = "5.0.3"
pathfinding = { version = "4.9.1", path = "../../pathfinding" }
rayon = "1.10.0"
bitvec = "1.0.1"
lazy_static = "1.5.0"
crossbeam = "0.8.4"
#clap = { version = "4.5.23", features = ["derive"] }
#bytemuck = { version = "1.20.0", features = ["extern_crate_alloc"] }

derivative = "2.2.0"
colorgrad = "0.7.0"

nu-ansi-term = { workspace = true }