[package]
name = "facto-loop-miner-fac-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
facto-loop-miner-common = { path = "../common" }
#
tracing = { workspace = true }
thiserror = { workspace = true }
num-format = { workspace = true }
strum = { workspace = true }
itertools = { workspace = true }
#
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1.19"
serde-lua-table = { git = "https://github.com/Nerixyz/serde-lua-table.git", tag = "v0.1.2" }
#
rand = "0.8.5"
regex = "1.11.1"
rcon-client = "0.1.2"
base64ct = { version = "1.6.0", features = ["alloc"] }
flate2 = "1.0.35"
exhaustive = "0.2.2"
enum-map = "2.7.3"
unicode-segmentation = "1.12.0"
num-traits = "0.2.19"

# managed for core
opencv = { version = "0.89.0", default-features = false, features = [
    "clang-runtime",
    "imgcodecs",
    "imgproc"
] }