[package]
name = "facto-loop-miner-fac-engine"
version.workspace = true
edition.workspace = true

[dependencies]
facto-loop-miner-common = { path = "../common" }
#
tracing = { workspace = true }
thiserror = { workspace = true }
num-format = { workspace = true }
strum = { workspace = true }
enum-map = { workspace = true }
itertools = { workspace = true }
#
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1.19"
serde-lua-table = { git = "https://github.com/Nerixyz/serde-lua-table.git", tag = "v0.1.2" }
#
#rand = "0.8.5"
rcon-client = "0.1.2"
base64ct = { version = "1.6.0", features = ["alloc"] }
flate2 = "1.0.35"
exhaustive = "0.2.2"
unicode-segmentation = "1.12.0"
num-traits = "0.2.19"

# managed for core
opencv = { version = "0.94.2", default-features = false, features = [
    "clang-runtime",
    "imgcodecs",
    "imgproc"
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "trim_bench"
harness = false