[package]
name = "facto-loop-miner-io"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.168"
memmap2 = "0.9.5"
thiserror = "1.0.69"
itertools = "0.12.1"
num-format = "0.4.4"
#uring-sys2 = { git = "https://github.com/topecongiro/uring-sys.git" }
#uring-sys2 = "0.9.1"
uring-sys2 = { path = "../../uring-sys" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
lol = []
