[package]
name = "facto-loop-miner-io"
version = "0.1.0"
edition = "2021"

[dependencies]
facto-loop-miner-common = { path = "../common" }
#
tracing = { workspace = true }
thiserror = { workspace = true }
num-format = { workspace = true }
itertools = { workspace = true }
#
libc = "0.2.168"
memmap2 = "0.9.5"
#uring-sys2 = { git = "https://github.com/topecongiro/uring-sys.git" }
#uring-sys2 = "0.9.1"
uring-sys2 = { path = "../../uring-sys" }

[features]
lol = []
